<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="sample_app_name">SipPhone</string>
    <string name="configure_sip_account">Configure SIP account</string>
    <string name="hint_field_user">username</string>
    <string name="hint_field_domain">domain.com</string>
    <string name="hint_field_password">password</string>
    <string name="hint_field_proxy">proxy hostname</string>
    <string name="hint_field_sipaddress">username@hostname</string>
    <string name="btn_call">Make Call</string>
    <string name="btn_save_account">Save Account</string>
    <string name="menu_settings">Settings</string>

</resources>