<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <!-- Account basic management -->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/configure_sip_account"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/field_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_field_user"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/field_domain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_field_domain"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/field_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_field_password"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/field_proxy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_field_proxy"
            android:inputType="text" />

        <Button
            android:id="@+id/save_acc_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_save_account" />

        <EditText
            android:id="@+id/field_sipaddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_field_sipaddress"
            android:inputType="textEmailAddress" />

        <Button
            android:id="@+id/call_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_call" />
    </LinearLayout>

</ScrollView>